2010-01-09  Tiger Soldier  <tigersoldi@gmail.com>

	* configure.ac: New Release

	* src/ol_utils_cmdline.c: ADD: Command line utilities

	* src/ol_player_moc.c: ADD: MOC support

2010-01-08  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_main.c (check_music_change): FIX: issue 40. Music change check failed when a music with its title unset.

	* src/ol_utils.c : Add ol_strptrcpy and ol_streq.

2010-01-07  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_path_manage.h: Change the return value from size_t to int, since size_t is unsigned but we need to return -1

	* src/ol_main.c (for_each_lrc_pattern): FIX: issue 39, the pattern expanding failure is ignored due to type casting.

2010-01-06  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_xmms2.c: ADD: XMMS2 support

2010-01-05  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_exaile03.c: FIX: issue 34, getting music info in Exaile will not return false when lack of artist.

2010-01-04  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_main.c: FIX: issue 35, create lyrics directory on downloading if not exists.

2009-12-27  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_mpd.c: ADD: MPD support

2009-12-12  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_lrc_fetch_module.c: Change the module of search thread to be multiple thread each process a single search requestion. It is better to change into a singleton with a message later.

2009-12-11  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_lrc_fetch_module.c (ol_lrc_fetch_download_func): FIX: Crash when downloading failed due to file is NULL ans should not call g_strdup

	* src/ol_lrc_utility.c (ol_lrc_utility_get_lyric_by_time): FIX: Crash due to NULL parameters

2009-12-10  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_lrc_parser.c: FIX: Deadloop on parsing LRC files.

	* src/ol_lrc_parser.h: Typto, Of->of

2009-12-09  Tiger Soldier  <tigersoldi@gmail.com>
